--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,30 @@
 
-<h1>Bienvenidos a mundo crcohet!</h1>
+<html>
+    <body>
+   
+<h1 align = "center">¡Bienvenida ó bienvenido, a mundo crochet!</h1>
 
-<p>Presentación de la página web</p>
-
-
+<p>Presentación de la página web
+En esta página encontrarás conocimiento para adquirir, acerca de lo que es el crochet
+y encontrarás herramientas audiovisuales recolectadas por nosotros con los que se te
+ facilitará aprender a tejer, dando tus primeros pasos en nuestra sección de aprendizaje,
+ la cual te autodirigirá haciendo click en el botón de abajo.
+</p>
 
 <button mat-raised-button color="primary">Botón Material</button>
 
+<p>Bueno continuando con lo que decía, aquí también podrás aprender un poco acerca de la
+    historia del crochet, en este apartado encontrarás también las historias de las primeras
+    puntadas que tuvieron lugar en la vida de algunas tejedoras, aquí tambipen podrás contarnos
+    tu primera experiencia con el crochet, este botón de abajo te dirijirá a la historia del 
+    crochet y a un apartado en donde podrás contarnos tu historia y experiencia como tejedora
+    o el porque quieres adentrarte a este mundo de crochet, nos interesa conocener el porque
+    te gustaría aprender este arte y transmitir este bello conocimiento del crochet y las 
+    maravillas que salen de este hermosa habilidad dada por nuestros antepasados.
+</p>
 
+<button mat-raised-button color="primary">Botón Historia</button>
+
+
+   </body>
+</html>
