se pusieron los  dos parrafos individualmente en un div separado, con personalización de colores tonalidades pastel

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,18 +1,34 @@
 
-<html>
+<html lang="es">
     <body>
-   
+   <!--titulo de la página principal-->
 <h1 align = "center">¡Bienvenida ó bienvenido, a mundo crochet!</h1>
 
-<p>Presentación de la página web
-En esta página encontrarás conocimiento para adquirir, acerca de lo que es el crochet
+
+<!--Presentación de la página web-->
+<div style="border: 2px solid pink; padding: 10px; background-color: #ffe8e8;
+color: #333; border-radius: 10px; font-family: Arial, sans-serif; margin: 30px;">
+
+     <meta charset="UTF-8">
+       <p>En esta página encontrarás conocimiento para adquirir, acerca de lo que es el crochet
 y encontrarás herramientas audiovisuales recolectadas por nosotros con los que se te
  facilitará aprender a tejer, dando tus primeros pasos en nuestra sección de aprendizaje,
  la cual te autodirigirá haciendo click en el botón de abajo.
-</p>
+      </p>
 
-<button mat-raised-button color="primary">Botón Material</button>
+    <!--botón que dirije a la sección de aprendizaje-->
+    <button mat-raised-button color="primary">Botón Material</button>
 
+</div>
+
+<br>
+<br>
+
+<!--párrafo introduciendo a la sección de historia-->
+  <div style="border: 2px solid pink; padding: 10px; background-color: #ffe8e8;
+color: #333; border-radius: 10px; font-family: Arial, sans-serif; margin: 30px;">
+
+     <meta charset="UTF-8">
 <p>Bueno continuando con lo que decía, aquí también podrás aprender un poco acerca de la
     historia del crochet, en este apartado encontrarás también las historias de las primeras
     puntadas que tuvieron lugar en la vida de algunas tejedoras, aquí tambipen podrás contarnos
@@ -23,8 +39,9 @@ y encontrarás herramientas audiovisuales recolectadas por nosotros con los que 
     maravillas que salen de este hermosa habilidad dada por nuestros antepasados.
 </p>
 
-<button mat-raised-button color="primary">Botón Historia</button>
-
-
+    <!--Aquí irá un botón que se llamará: Botón Historia-->
+      </div>
    </body>
+
+
 </html>
