Añadir carrusel de imágenes a la página de inicio.

--- a/src/app/pages/learn/learn.component.html
+++ b/src/app/pages/learn/learn.component.html
@@ -1,3 +1,14 @@
-<div class="card flex justify-center" severity="success">
-    <p-button label="submit" />
+
+<div class="card">
+    <p-galleria [value]="images" [autoPlay]="true" [circular]="true" [responsiveOptions]="responsiveOptions" [numVisible]="5" [containerStyle]="{ 'max-width': '640px' }">
+        <ng-template #item let-item>
+            <img [src]="item.itemImageSrc" style="width: 100%; display: block" />
+        </ng-template>
+        <ng-template #thumbnail let-item>
+            <img [src]="item.thumbnailImageSrc" style="display: block" />
+        </ng-template>
+    </p-galleria>
 </div>
+
+
+
